# ai-resume-proposal-generator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 6e2404a7c50c_initial_migration.py  d3f409e330ef_add_contact_info_to_user_profile.py
app/: main.py
app/database/: __init__.py  connection.py  models.py  repository.py
app/models/: schemas.py
app/services/: docx_exporter.py  job_analyzer.py  match_calculator.py  ollama_client.py  pdf_exporter.py  proposal_generator.py  resume_generator.py
data/: ai_resume_proposal.db
tests/: test_ai_generators.py  test_database.py  test_exporters.py  test_job_analyzer.py  test_ollama_client.py  test_ui_helpers.py  test_workflow.py
